# real_time_grasp_pipeline

./: .gitignore  LICENSE  Makefile  README.md  requirements-ros.txt  requirements.txt
Tensor Board Analysis/: README.md
benchmark/: benchmark.py
configs/: grasp.yaml  pipeline.yaml  yolo.yaml
demo/: demo_script.sh
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
isaac_sim/: launch_sim.py
media/: readme.md
profiling/: gpu_profiler.py
rl/: evaluate_rl.py  grasp_policy_loader.py  train_rl.py
rl/envs/: grasp_env.py
ros2_ws/src/grasp_pipeline/: package.xml  setup.cfg  setup.py
ros2_ws/src/grasp_pipeline/grasp_pipeline/: camera_node.py  depth_estimator.py  grasp_action_server.py  grasp_planner.py  yolo_detector.py
ros2_ws/src/grasp_pipeline/launch/: pipeline.launch.py
scripts/: benchmark.sh  build.sh  download_models.sh  evaluate_rl.sh  export_tensorrt.sh  gpu_profile.sh  record_demo.sh  run_pipeline.sh  run_sim.sh  setup.sh  tensorboard.sh  train_rl.sh
visualization/: latency_dashboard.py  pipeline_monitor.py  realtime_overlay.py
