<?xml version="1.0"?>
<package format="3">
  <name>grasp_pipeline</name>
  <version>0.0.1</version>
  <description>Real-time robotic grasp pipeline</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
